@@ -142,6 +142,9 @@ accept-auto:		no # not verified yet
 # If no, LENGTH OF occurs-fld is computed as just size of field
 occurs-max-length-without-subscript: no
 
+# Is LENGTH OF allows in DATA DIVISION
+length-in-data-division: yes
+
 # not-reserved:
 # Value: Word to be taken out of the reserved words list
 # -fill upon request-
