@@ -1482,13 +1482,13 @@ DEP1=0
 DEP2=1
 DATA21(1)=B
 DATA3=CD
-TEST WITH ODO: 'A01BCD' Len:000000006
+TEST WITH ODO: 'A01BCD' Len:6
 ODO-DATA1=A.
 ODO-DEP1=0.
 ODO-DEP2=1.
 ODO-DATA21(1)=B.
 ODO-DATA3=CD.
-TEST WITH ODO: 'A12BCDEF' Len:000000008
+TEST WITH ODO: 'A12BCDEF' Len:8
 ODO-DATA1=A.
 ODO-DEP1=1.
 ODO-DEP2=2.
@@ -1496,7 +1496,7 @@ ODO-DATA11(1)=B.
 ODO-DATA21(1)=C.
 ODO-DATA21(2)=D.
 ODO-DATA3=EF.
-TEST WITH ODO: 'A23BCDEFGH' Len:000000010
+TEST WITH ODO: 'A23BCDEFGH' Len:10
 ODO-DATA1=A.
 ODO-DEP1=2.
 ODO-DEP2=3.
