@@ -2445,7 +2445,7 @@ AT_DATA([prog.cob], [
 
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
-[000000108
+[0000000108
 ])
 
 AT_CLEANUP
@@ -2467,7 +2467,7 @@ AT_DATA([prog.cob], [
 
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
-[000000004
+[0000000004
 ])
 
 AT_CLEANUP
@@ -2489,7 +2489,7 @@ AT_DATA([prog.cob], [
 
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
-[000000002
+[0000000002
 ])
 
 AT_CLEANUP
@@ -3097,7 +3097,7 @@ AT_DATA([prog.cob], [
 
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
-[000000003
+[0000000003
 ])
 
 AT_CLEANUP
@@ -3119,7 +3119,7 @@ AT_DATA([prog.cob], [
 
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
-[000000002
+[0000000002
 ])
 
 AT_CLEANUP
